update: protostuff redis cache aspect